Update to JDK 22, all previews off